Bug 226029 - Removing files from DVD data project is very slow
Summary: Removing files from DVD data project is very slow
Status: RESOLVED FIXED
Alias: None
Product: k3b
Classification: Applications
Component: Data Project (other bugs)
Version First Reported In: 1.68.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Trueg
URL:
Keywords:
: 234639 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-02-09 15:29 UTC by DGardner
Modified: 2011-09-18 21:04 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description DGardner 2010-02-09 15:29:41 UTC
Version:           1.68.0 (using KDE 4.3.5)
OS:                Linux
Installed from:    Ubuntu Packages

I am backing up photographs to a DVD and carving up sets of them
to fit on each disk. I have a folder per year and a sub-folder per
month. Each "month" folder contains the photos for that month. I
drop a "year" folder into a DVD data project and then remove
"month" folders from that year folder until the size of the set
is small enough for 4.7GB disk. (The removed "month" folders will
go on the next disk.)

Adding the full "year" folder is quick enough, considering there
are several thousand images. Removing a few "month" sub-folders
is also reasonably quick (a few seconds). However, my "2008/05"
folder contains about 1,500 images totalling 6GB, so I have to
remove files from within that folder. This takes a long, long,
long time! Removing about 1,000 of the 1,500 images took over five
minutes. All the while, k3b's CPU usage was at about 98% and there
was little or no disk activity. The UI was unresponsive for those
five minutes, but then returned to normal with the images removed
from the project.

It works, but why is it taking so long?
Comment 1 markuss 2010-03-16 16:15:00 UTC
In an attempt to clean up old bugs that are not valid for K3b 2.0 (=KDE SC 4.x port) anymore, this is now being marked as UNMAINTAINED.
If this bug is still valid for 2.0, please reopen it.
Comment 2 Michał Małek 2010-03-17 07:16:14 UTC
I believe it's still valid, reopening
Comment 3 Michał Małek 2010-04-17 21:30:21 UTC
*** Bug 234639 has been marked as a duplicate of this bug. ***
Comment 4 DGardner 2011-04-08 20:28:50 UTC
I re-tested this with k3b 2.0.1 (on KDE 4.5.1) and it does not appear
to be a problem any more. Hundreds of files can be removed almost
instantly.
Comment 5 Michał Małek 2011-09-18 21:04:36 UTC
Git commit 874784037c5aea305e35456524e6d4276fdea3a5 by Michal Malek.
Committed on 18/09/2011 at 11:34.
Pushed by mmalek into branch 'master'.

Improved performance of deleting items from data project

Previously each item was being deleted one by one. Now whole
ranges of items are removed at once (if possible i.e. the ranges are
continouos). This speeds up the process significantly.

BUG: 226029
FIXED-IN: 2.1.0

M  +1    -0    ChangeLog
M  +9    -0    libk3b/projects/datacd/k3bdatadoc.cpp
M  +2    -0    libk3b/projects/datacd/k3bdatadoc.h
M  +58   -25   libk3b/projects/datacd/k3bdiritem.cpp
M  +2    -0    libk3b/projects/datacd/k3bdiritem.h
M  +5    -10   src/projects/k3bdataprojectmodel.cpp
M  +6    -12   src/projects/k3bdataviewimpl.cpp

http://commits.kde.org/k3b/874784037c5aea305e35456524e6d4276fdea3a5