Improved performance of deleting items from data project

Previously each item was being deleted one by one. Now whole
ranges of items are removed at once (if possible i.e. the ranges are
continouos). This speeds up the process significantly.

BUG: 226029
FIXED-IN: 2.1.0